refactor: improve code quality with constants and modern Java
- Added DEFAULT_PASSWORD constant and removed hardcoded passwords
- Replaced collect(Collectors.toList()) with Stream.toList()
- Removed unused Collectors import
- Improved code maintainability and modern Java usage